--- a/etc/systemd/system/ambeserver@.service
+++ b/etc/systemd/system/ambeserver@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=DV3000 Daemon
+Description=AMBEserver Daemon
 After=network.target serial-getty@%i.service dev-%i.device
 Conflicts=serial-getty@%i.service
 OnFailure=serial-getty@%i.service
@@ -10,7 +10,7 @@ EnvironmentFile=/etc/opendv/%p-%i.conf
 PermissionsStartOnly=true
 ExecStartPre=/bin/chgrp dialout /dev/%i
 ExecStartPre=/bin/chmod 0660 /dev/%i
-ExecStart=/usr/sbin/AMBEserver -p ${UDP_PORT} -i /dev/%i $AMBESERVER_FLAGS
+ExecStart=/usr/local/sbin/AMBEserver -p ${UDP_PORT} -i /dev/%i $AMBESERVER_FLAGS
 Restart=on-abort
 
 [Install]
